--- a/views/index.erb
+++ b/views/index.erb
@@ -7,8 +7,13 @@
 <ul>
   <% @files.each do |file| %>
   <li>
-    <a href="<%= file %>"><%= file %></a> (<a href="<%= file %>/edit">edit</a>)
-
+    <a href="<%= file %>"><%= file %></a>
+    <form class="inline" method="get" action="<%= file %>/edit">
+      <button type="submit">edit</button>
+    </form>
+    <form class="inline" method="post", action="<%= file %>/delete">
+      <button type="submit">delete</button>
+    </form>
   </li>
   <% end %>
 </ul>
