--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,3 @@
-<% if session[:message] %>
-  <div class="message">
-    <p><%= session.delete(:message) %></p>
-  </div>
-<% end %>
-
 <ul>
   <% @files.each do |file| %>
   <li>
@@ -21,3 +15,16 @@
 <div>
   <a href="/document/new">New document</a>
 </div>
+
+<% if @user %>
+<div class="user-status">
+  Logged in as <%= @user %>.
+</div>
+<form class="inline" method="post" action="/users/sign_out">
+  <button type="submit">Sign out</button>
+</form>
+<% else %>
+
+  <a href="/users/sign_in">Sign In</a>
+</form>
+<% end %>
