--- a/views/sign_in_form.erb
+++ b/views/sign_in_form.erb
@@ -1,4 +1,4 @@
-<form name="sign_in" method="post" action="/">
+<form name="sign_in" method="post" action="/users/sign_in">
   <div>
     <label for="user">Username:</label>
     <input type="text" name="user" value="<%= @user %>" />
